@@ -64,16 +64,17 @@ public class DropDownSheetWriteHandler implements SheetWriteHandler {
         DataValidationHelper helper = sheet.getDataValidationHelper();
 
         // 获取所有字段
-        // 只处理有ExcelProperty注解的字段
         List<Field> excelFields = Arrays.stream(clazz.getDeclaredFields())
                 .filter(field -> !Modifier.isStatic(field.getModifiers())) // 排除静态字段
-                .filter(field -> field.isAnnotationPresent(ExcelProperty.class)).sorted((f1, f2) -> {
-                    ExcelProperty ep1 = f1.getAnnotation(ExcelProperty.class);
-                    ExcelProperty ep2 = f2.getAnnotation(ExcelProperty.class);
-                    return Integer.compare(ep1.index(), ep2.index());
-                }).toList();
+                .filter(field -> field.isAnnotationPresent(ExcelProperty.class)) // 只处理有ExcelProperty注解的字段
+                .collect(Collectors.toList());
 
         // 按@ExcelProperty的index或order排序
+        excelFields.sort((f1, f2) -> {
+            ExcelProperty ep1 = f1.getAnnotation(ExcelProperty.class);
+            ExcelProperty ep2 = f2.getAnnotation(ExcelProperty.class);
+            return Integer.compare(ep1.index(), ep2.index());
+        });
 
         for (int i = 0; i < excelFields.size(); i++) {
             Field field = excelFields.get(i);
